--- a/HelloAndroidPADC/app/src/main/res/layout/register_activity.xml
+++ b/HelloAndroidPADC/app/src/main/res/layout/register_activity.xml
@@ -23,19 +23,27 @@
 
     </android.support.design.widget.AppBarLayout>
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    >
 
-    <RelativeLayout
+
+
+    <LinearLayout
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical"
+     >
 
 
         <TextView
             android:id="@+id/btn_already_have_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            
             android:layout_marginTop="10dp"
             android:foreground="@drawable/ripple_primary"
             android:textColor="@color/colorPrimary"
@@ -65,7 +73,7 @@
             android:id="@+id/input_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/input_name"
+
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:textColorHint="@color/colorPrimary">
@@ -88,7 +96,7 @@
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/input_phone"
+
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:textColorHint="@color/colorPrimary">
@@ -108,7 +116,7 @@
             android:id="@id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/input_email"
+
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:textColorHint="@color/colorPrimary">
@@ -128,7 +136,7 @@
             android:id="@+id/input_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/input_password"
+
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:textColorHint="@color/colorPrimary">
@@ -149,7 +157,7 @@
             android:id="@+id/input_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/input_confirm_password"
+
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:textColorHint="@color/colorPrimary">
@@ -170,7 +178,7 @@
             android:layout_height="wrap_content"
             android:foreground="@drawable/ripple_primary"
             android:layout_alignLeft="@id/input_address"
-            android:layout_below="@id/input_address"
+
             android:layout_marginTop="2dp"
             android:text="I'm at my home"
             android:textAlignment="textStart"
@@ -182,7 +190,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/check_address"
-            android:layout_below="@id/check_address"
+
             android:layout_marginTop="24dp"
             android:text="Gender"
             android:textColor="@color/colorPrimary"
@@ -196,7 +204,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/check_address"
             android:foreground="@drawable/ripple_primary"
-            android:layout_below="@id/tv_gender">
+           >
 
 
             <RadioButton
@@ -227,7 +235,7 @@
             android:layout_marginLeft="36dp"
             android:layout_marginRight="36dp"
             android:layout_marginTop="16dp"
-            android:layout_below="@id/rdg_gender"
+
             android:textColor="@color/white_full"
             android:text="Register"
             android:textAllCaps="false"
@@ -235,11 +243,6 @@
             android:foreground="@drawable/ripple_white"
             />
 
-
-
-
-
-
-    </RelativeLayout>
-
+    </LinearLayout>
+</ScrollView>
 </android.support.design.widget.CoordinatorLayout>
